--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   form_field_validator: ^1.1.0
   fluttertoast: ^8.0.8
   motion_toast: ^2.0.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
