--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^0.8.4+5
   json_annotation: ^4.4.0
   flutter_svg: ^1.0.3
+  flutter_local_notifications: ^9.3.2
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
