--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_local_notifications: ^9.3.2
   sqflite: ^2.0.2
+  sensors_plus: ^1.3.0
 
 dev_dependencies:
   flutter_test:
