--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^9.3.2
   sqflite: ^2.0.2
   sensors_plus: ^1.3.0
+  awesome_notifications: ^0.6.21
 
 dev_dependencies:
   flutter_test:
